# brain_fuck

./: Cargo.toml  README.md
code/: pi16.b  prime.b
src/: brainfuck.rs  main.rs
