[package]
name = "brain_fuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
# opt-level = 2               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.